[package]
name = "tokio-postgres-dsql"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.6"
aws-sdk-dsql = "1.38.0"
tokio-postgres = "0.7.14"
postgres-openssl = { version = "0.5", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
openssl-probe = { version = "0.1", optional = true }
thiserror = "2.0.17"
tokio = "1.47.1"

[features]
openssl = ["dep:postgres-openssl", "dep:openssl", "dep:openssl-probe"]

[dev-dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
